[gd_scene load_steps=8 format=3 uid="uid://xda8xvisbv73"]

[ext_resource type="Script" uid="uid://dwc7axeo1f1rq" path="res://Scripts/Menus/main_menu.gd" id="1_penys"]
[ext_resource type="Texture2D" uid="uid://cquab8p61lqqj" path="res://Assets/UI/FrogButton.png" id="1_pha2q"]
[ext_resource type="FontFile" uid="uid://l8t6k1jc4dbj" path="res://Assets/Font/pixel.ttf" id="2_penys"]
[ext_resource type="Texture2D" uid="uid://2ex3xpixhebp" path="res://Assets/UI/Buttons/Normal.png" id="3_chkef"]
[ext_resource type="Texture2D" uid="uid://cun8h6yr0akcc" path="res://Assets/UI/Buttons/Hover.png" id="4_neey8"]
[ext_resource type="Texture2D" uid="uid://daa5k5crtoue0" path="res://Assets/UI/Buttons/Pressed.png" id="5_4fgt5"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j4kqa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_chkef")
}, {
"duration": 1.0,
"texture": ExtResource("4_neey8")
}, {
"duration": 1.0,
"texture": ExtResource("5_4fgt5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_penys")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -24.0
offset_right = 80.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/StartButton"]
layout_mode = 0
offset_right = 160.0
offset_bottom = 48.0
texture = ExtResource("1_pha2q")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="VBoxContainer/StartButton"]
sprite_frames = SubResource("SpriteFrames_j4kqa")
frame_progress = 0.130968
offset = Vector2(80, 24)

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.5
offset_top = -11.5
offset_right = 39.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.611765, 0.858824, 0.262745, 1)
theme_override_fonts/font = ExtResource("2_penys")
theme_override_font_sizes/font_size = 10
text = "start game"

[node name="LeaderboardButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 2
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/LeaderboardButton"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_pha2q")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ButtonSprite_Leaderboard" type="AnimatedSprite2D" parent="VBoxContainer/LeaderboardButton"]
sprite_frames = SubResource("SpriteFrames_j4kqa")
frame_progress = 0.130968
offset = Vector2(80, 24)

[node name="Label" type="Label" parent="VBoxContainer/LeaderboardButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -11.5
offset_right = 42.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.611765, 0.858824, 0.262745, 1)
theme_override_fonts/font = ExtResource("2_penys")
theme_override_font_sizes/font_size = 10
text = "Leaderboard"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 2
flat = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Exit"]
custom_minimum_size = Vector2(160, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pha2q")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="ButtonSprite_Exit" type="AnimatedSprite2D" parent="VBoxContainer/Exit"]
sprite_frames = SubResource("SpriteFrames_j4kqa")
frame_progress = 0.130968
offset = Vector2(80, 24)

[node name="Label" type="Label" parent="VBoxContainer/Exit"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.705882, 0.12549, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_penys")
theme_override_font_sizes/font_size = 10
text = "exit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/StartButton" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Exit" to="." method="_on_exit_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
